Added crest graphics + styling and sugarfication

--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,8 @@
 
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-            <div class="navbar-header">
-            <span class="navbar-brand text-center display-header" style="margin-left: 0px; color: white">
-              Enplug House Cup</a>
+            <div class="navbar-header center-text">
+            <span class="navbar-brand text-center display-header" style="margin-left: 0px; color: white">HOUSE CUP</a>
       </div>
 
     </div>
