--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.css">
+
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
@@ -22,14 +24,14 @@
 
 <body ng-cloak>
 
-    <div class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header center-text">
-            <span class="navbar-brand text-center display-header" style="margin-left: 0px; color: white">HOUSE CUP</a>
-      </div>
+    <!--<div class="navbar navbar-default navbar-fixed-top">-->
+        <!--<div class="container">-->
+            <!--<div class="navbar-header center-text">-->
+            <!--<span class="navbar-brand text-center display-header" style="margin-left: 0px; color: white">HOUSE CUP</a>-->
+      <!--</div>-->
 
-    </div>
-  </div>
+    <!--</div>-->
+  <!--</div>-->
  
   <div ng-view></div>
 
@@ -41,7 +43,9 @@
 <script src="//cdn.firebase.com/libs/angularfire/0.9.x/angularfire.min.js"></script>
 -->
   <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="http://code.angularjs.org/1.3.3/angular-animate.min.js" ></script>
+
+    <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/firebase/firebase.js"></script>
   <script src="bower_components/angularfire/dist/angularfire.js"></script>
 
