--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>House Cup</title>
+    <title>Enplug Cup</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
@@ -12,60 +12,51 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
-
-
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
     <link href="css/styles.css" rel="stylesheet">
-
     <link rel="stylesheet" href="css/app.css" />
     <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
+    <!-- Favicon -->
+    <link rel="icon" type="image/ico" href="/img/favicon.ico?v3" />
+    <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
 </head>
 
 <body ng-cloak>
-
     <!--<div class="navbar navbar-default navbar-fixed-top">-->
-        <!--<div class="container">-->
-            <!--<div class="navbar-header center-text">-->
-            <!--<span class="navbar-brand text-center display-header" style="margin-left: 0px; color: white">HOUSE CUP</a>-->
-      <!--</div>-->
-
+    <!--<div class="container">-->
+    <!--<div class="navbar-header center-text">-->
+    <!--<span class="navbar-brand text-center display-header" style="margin-left: 0px; color: white">HOUSE CUP</a>-->
     <!--</div>-->
-  <!--</div>-->
- 
-  <div ng-view></div>
-
-
-  <!-- In production use:
+    <!--</div>-->
+    <!--</div>-->
+    <div ng-view></div>
+    <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.x/angular.min.js"></script>
 <script src="//cdn.firebase.com/js/client/2.0.x/firebase.js"></script>
 <script src="//cdn.firebase.com/js/simple-login/1.6.x/firebase-simple-login.js"></script>
 <script src="//cdn.firebase.com/libs/angularfire/0.9.x/angularfire.min.js"></script>
 -->
-  <script src="bower_components/angular/angular.js"></script>
-    <script src="http://code.angularjs.org/1.3.3/angular-animate.min.js" ></script>
-
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="http://code.angularjs.org/1.3.3/angular-animate.min.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/firebase/firebase.js"></script>
-  <script src="bower_components/angularfire/dist/angularfire.js"></script>
-
-
-  <script src="js/app.js"></script>
-  <script src="js/config.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/decorators.js"></script>
-  <script src="js/directives.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/routes.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/firebase.utils.js"></script>
-  <script src="js/simpleLogin.js"></script>
-  <script src="js/changeEmail.js"></script>
-
+    <script src="bower_components/firebase/firebase.js"></script>
+    <script src="bower_components/angularfire/dist/angularfire.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/decorators.js"></script>
+    <script src="js/directives.js"></script>
+    <script src="js/filters.js"></script>
+    <script src="js/routes.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/firebase.utils.js"></script>
+    <script src="js/simpleLogin.js"></script>
+    <script src="js/changeEmail.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
